# anki-guitar

./: .gitignore  README.md  pyproject.toml
src/anki_guitar/: __init__.py  config.py
src/anki_guitar/deck/: __init__.py  builder.py
src/anki_guitar/pipelines/: chords.py  interval_names.py  intervals.py  svg_preview.py
src/anki_guitar/render/: svg_renderer.py  typst_renderer.py
src/anki_guitar/render/templates/: chord_shape.typ  interval_circle.typ
src/anki_guitar/theory/: __init__.py  chords.py  intervals.py  pitch.py
