[project]
name = "anki-guitar"
version = "0.1.0"
description = "Generate modular music-theory Anki decks with Typst visuals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "genanki>=0.13.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_guitar"]
